# level2-cv-semanticsegmentation-cv-06

./: .pre-commit-config.yaml  README.md  message.json  pyproject.toml  server_setting.sh
gpu_pool/: env.py
gpu_pool/cnf/: mysqld.cnf
src/: dataset.py  inference.py  loss.py  model.py  train.py  utils.py
